[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/Main.gd" type="Script" id=1]

[node name="Main" type="ScrollContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
follow_focus = true
scroll_horizontal_enabled = false
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 580.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 984.0
margin_bottom = 14.0
text = "TITLE"
align = 1
valign = 1

[node name="SubtitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 984.0
margin_bottom = 32.0
text = "TITLE"
align = 1
valign = 1

[node name="ProjectContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 984.0
margin_bottom = 560.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 50

[node name="ProjectFadeTween" type="Tween" parent="."]
